<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:paddingLeft="24dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_amount"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:textSize="18sp" />

        <EditText
            android:id="@+id/amountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            tools:ignore="LabelFor">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/tip_percent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioTenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_percent"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioFifteenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fifteen_percent"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioTwentyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_percent"
                android:textSize="18sp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_rounding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupRounding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioNeverRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/never_round"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioRoundDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_down"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioRoundUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/round_up"
                android:textSize="18sp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textSize="18sp"
            tools:style="@style/MyButton" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_tip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/totalTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/totalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </TableRow>

</TableLayout>